# clothSim

./: CMakeLists.txt
scripts/: video.sh
shader/: shader.frag  shader.vert
src/animplan/: main.cpp
src/bvh/: bvh.cpp  bvh.hpp
src/collision/: collision.cpp  collision.hpp  sdf.cpp  sdf.hpp
src/display/: camera.cpp  camera.hpp  drawable.cpp  drawable.hpp  interface.cpp  interface.hpp  screenshot.cpp  screenshot.hpp  shader.hpp
src/forces/: force.cpp  force.hpp
src/integrators/: explicitintegrator.cpp  explicitintegrator.hpp  implicitintegrator.cpp  implicitintegrator.hpp  timeintegrator.hpp
src/primitives/: trimesh.hpp
src/shapes/: particle.cpp  particle.hpp  shape.cpp  shape.hpp
src/simulators/: dynamics.hpp  massspringsystem.cpp  massspringsystem.hpp  particlesystem.cpp  particlesystem.hpp  rigidbody.cpp  rigidbody.hpp  simulator.cpp  simulator.hpp
src/system/: parameters.hpp  system.cpp  system.hpp
src/tools/: timer.cpp  timer.hpp
